# CIVIC-civic-pulse

./: .gitignore  AGENTS.md  LINEAR_TICKET.md  README.md  TESTING_GUIDE.md  index.html  link-pdfs-to-documents.ps1  package.json  process-documents.ps1  temp_full_doc.txt  upload-db-to-k8s.ps1
.github/workflows/: README.md  deploy.yml
backend/: .gitignore
backend/configs/: clay_county.yaml  derby_civicweb.yaml  manhattan_city_commission.yaml  wichita_agenda_center.yaml
backend/data/: civicpulse.db  topics.csv
backend/db/: civicpulse.db  migrate_add_pdf_data.sql  schema.sql
backend/ingestion/: Kansas_Cities_URLs.csv  README.md  civicplus_scraper.py  civicweb_nofolders_scraper.py  config_loader.py  legistar_scraper.py  local_db.py  page_scraper.py  single_link_scraper.py
backend/processing/: README.md  pdf_processor.py
civicpulse/: .dockerignore  README.md  TESTING.md  docker-compose.yml  jest.config.js  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  temp_doc.txt  tsconfig.json
civicpulse/src/lm_parser/: Dockerfile  README.md  docker-entrypoint.sh  parse_documents.py  pyproject.toml
configs/: schema.json
data/: civicpulse.db
infrastructure/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  build-images.ps1  build-images.sh  copy-db-job.yaml  copy-db-pod.yaml  create-cluster.ps1  fix-db-permissions-job.yaml  index.ts  init-db-job.yaml  install-pulumi.ps1  package-lock.json  package.json
ingestion/: local_db.py  single_link_scraper.py  test_duplicate_cli.py
tests/: test_ingestion_basic.py
(+115 files in other folders)
