[project]
name = "civipulse-lm-parser"
version = "0.2.0"
description = "LLM-powered document metadata extractor for CivicPulse"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "CivicPulse Team"}]
dependencies = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.30",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.0.8",
    "google-genai>=1.39.1",
    "pydantic>=2.9.2",
    "pandas>=2.3.3",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

